# child-llm

./: LICENSE  README.md  chunked_iterative_generator.py  chunked_two_pass_generator.py  pyproject.toml  requirements.txt  simple_validation.py  single_pass_generator.py
child_llm/: cli.py
child_llm/generators/: __init__.py  scenario_generator.py  timeline_generator.py  vocabulary_generator.py
child_llm/models/: __init__.py  consciousness.py  development.py  scenario.py
child_llm/pipeline/: __init__.py  generator.py  orchestrator.py  planner.py  validator.py
my_monologue/scenarios/: baseline_v1.json  my_child.json
my_monologue/timeline/: master_timeline.json
my_monologue/vocabulary/: vocabulary_year_1_period_1.json  vocabulary_year_1_period_2.json  vocabulary_year_2_period_1.json  vocabulary_year_2_period_2.json  vocabulary_year_3_period_1.json  vocabulary_year_3_period_2.json  vocabulary_year_3_period_3.json  vocabulary_year_4_period_1.json  vocabulary_year_4_period_2.json  vocabulary_year_4_period_3.json  vocabulary_year_4_period_4.json  vocabulary_year_5_period_1.json  vocabulary_year_5_period_2.json  vocabulary_year_5_period_3.json
